edit views to hiking related

--- a/views/dev.ejs
+++ b/views/dev.ejs
@@ -1,5 +1,66 @@
 <% include ./partials/header %>
 
-<H1>Developer Info</H1>
+<H3 id="devs" class= "text-center">Info for Developers</H3>
+<div class="container">
+     <div class="row">
+        <div class="col-md-6">
+             <p class="lead text-center"></p>
+             <div class="list-group">
+                 <li class="list-group-item">About Page for Developers</li>
+                 <div class="well">
+                  <p><em>MVC (Model-View-Controller)</em> design architecture using NodeJS framework: ExpressJS.</p>
+                  
+                  <p>Following RESTful ROUTES standard for HTTP REQUESTS (get,post,put,delete) mapping to <em>control</em> CRUD operations.</p>
+                  <p>Handling <em>Models</em> using Mongoose npm package.</p>
+                  <p><em>Views</em> or HTML manipulation using EJS npm package.</p>
+                  <p>Nested route for comment system.</p>
+                  <p>User Authentication and User Autherization using PassportJS npm package (eg: only authorized user can edit and delete).</p>
+                  <p>Flash alerts on succesful or error messages by using connect-flash npm package (eg: Successfully Logged Out!) alert.</p>
+                  <p>GoogleMap API showing respective hiking spot on google map.</p>
+               </div>
+               </div>
+               </div>
+          <div class="col-md-6">
+             <p class="lead text-center"></p>
+             <div class="list-group">
+                 <li class="list-group-item">Key Features</li>
+                 <div class="well">
+                <p>Able to perform a persistance CRUD operations</p>
+               <p>Commenting System</p>
+               <p>User Authentication</p>
+               <p>User Autherization</p>
+               <p>Googlemap API</p>
+               <p>Responsive Web Design using Bootstrap</p>
+               <p>Dynamic Web Page</p>
+               <p>Flash alerts for successful or error messages</p>
+               </div>
+                    <div class="list-group">
+                 <li class="list-group-item">List of Technologies involved </li>
+                 <div class="well">
+                <p><strong>Front-End</strong>  : HTML5, CSS3, Javascript, Jquery, Bootstrap</p>
+                <p><strong>Back-End</strong> : Nodejs, NPM, Expressjs, Passportjs, Mongoose, ejs, Googlemap API</p>
+                <p><strong>Database</strong> : MongoDB</p>
+                <p><strong>Hosting</strong> : Heroku Web Hosting, Cloud-Hosted MongoDB (mlab.com)</p>
+               <p><strong>Others</strong> : Git, Github, c9.io IDE, Unix(Command Line) Commands</p>
+               </div>
 
-<% include ./partials/footer %>
+
+
+
+
+
+</div>
+             </div>
+          </div>
+    </div>
+</div>    
+
+ <footer class="text-center">
+               <hr>
+               <p>Copyright <i class="fa fa-copyright" aria-hidden="true"></i>
+ 2017, Zulhafiz Zaini. All Rights Reserved.<a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>
+</a></p>
+ </footer>    
+
+</body>
+</html>
