--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -14,10 +14,9 @@
     
     <div class="row text-center">
         <div class="col-lg-12">
-            <h3>List of Our Hiking Spots All Around Malaysia</h3>
+            <h3>Popular Hiking Spots All Around Malaysia</h3>
         </div>
     </div>
-    
         <div class="row text-center" style="display:flex; flex-wrap: wrap;">
             <% campgrounds.forEach(function(campground){ %>
                 <div class="col-md-3 col-sm-6">
@@ -39,4 +38,12 @@
         
 </div>
 
-<% include ../partials/footer %>
+ <footer class="text-center">
+               <hr>
+               <p>Copyright <i class="fa fa-copyright" aria-hidden="true"></i>
+ 2017, Zulhafiz Zaini. All Rights Reserved.<a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>
+</a.</p>
+ </footer>    
+
+</body>
+</html>
