--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -121,12 +121,12 @@
      </div>    
 </div>
 
+ <footer class="text-center">
+               <hr>
+               <p>Copyright <i class="fa fa-copyright" aria-hidden="true"></i>
+ 2017, Zulhafiz Zaini. All Rights Reserved.<a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>
+</a></p>
+ </footer>    
 
-
-
-
-
-
-
-
-<% include ../partials/footer %>
+</body>
+</html>
