--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header%>
 <div class="container">
     <div class="row">
-            <h1 class="text-center">Add New Comment to<%= campground.name %></h1>
+            <h1 class="text-center">Add New Comment to <%= campground.name %></h1>
         <div style="width: 30%; margin: 25px auto;">
             <form action="/campgrounds/<%= campground._id %>/comments" method="POST">
                 <div class="form-group">
@@ -11,7 +11,7 @@
                     <button class="btn btn-lg btn-primary btn-block">Submit</button>
                </div>
             </form>
-               <a href="/campgrounds">Go Back</a> 
+               <a href="/campgrounds/<%= campground._id %>">Go Back</a> 
         </div>
      
     </div>
