--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
              <ul class="nav navbar-nav">
                 <li><a class="navbar-brand" href="/">Home</a></li>
                 <li><a class="navbar-brand" href="/campgrounds">Our Lists</a></li>
-                <li><a class="navbar-brand" href="/dev">Developer Info</a></li>
+                <li><a class="navbar-brand" href="/dev">Info for Developers</a></li>
             
             </div>
             <div class="collapse navbar-collapse">
@@ -24,7 +24,7 @@
                         <li><a href="/login">Login</a></li>
                         <li><a href="/register">Sign Up</a></li>
                     <% } else { %>
-                    <li><a href="#">Signed In As <%= currentUser.username %></a></li>
+                    <li><a href="#">Signed in as <%= currentUser.username %></a></li>
                     <li><a href="/logout">Log Out</a></li>
                     <% } %>
                 </ul>
