Minor change on dev.ejs

--- a/views/dev.ejs
+++ b/views/dev.ejs
@@ -9,13 +9,12 @@
                  <li class="list-group-item">About Page for Developers</li>
                  <div class="well">
                   <p><em>MVC (Model-View-Controller)</em> design architecture using NodeJS framework: ExpressJS.</p>
-                  
                   <p>Following RESTful ROUTES standard for HTTP REQUESTS (get,post,put,delete) mapping to <em>control</em> CRUD operations.</p>
                   <p>Handling <em>Models</em> using Mongoose npm package.</p>
-                  <p><em>Views</em> or HTML manipulation using EJS npm package.</p>
-                  <p>Nested route for comment system.</p>
+                  <p>Using templating language EJS to generate HTML markup or <em>Views</em>.</p>
+                  <p>Nested route for commenting system.</p>
                   <p>User Authentication and User Autherization using PassportJS npm package (eg: only authorized user can edit and delete).</p>
-                  <p>Flash alerts on succesful or error messages by using connect-flash npm package (eg: Successfully Logged Out!) alert.</p>
+                  <p>Flash alerts for succesful or error messages by using connect-flash npm package (eg: Successfully Logged Out!) alert.</p>
                   <p>GoogleMap API showing respective hiking spot on google map.</p>
                </div>
                </div>
@@ -38,7 +37,7 @@
                  <li class="list-group-item">List of Technologies involved </li>
                  <div class="well">
                 <p><strong>Front-End</strong>  : HTML5, CSS3, Javascript, Jquery, Bootstrap</p>
-                <p><strong>Back-End</strong> : Nodejs, NPM, Expressjs, Passportjs, Mongoose, ejs, Googlemap API</p>
+                <p><strong>Back-End</strong> : NodeJS, NPM, ExpressJS, PassportJS, Mongoose, EJS, Googlemap API</p>
                 <p><strong>Database</strong> : MongoDB</p>
                 <p><strong>Hosting</strong> : Heroku Web Hosting, Cloud-Hosted MongoDB (mlab.com)</p>
                <p><strong>Others</strong> : Git, Github, c9.io IDE, Unix(Command Line) Commands</p>
