Minor change on dev.ejs

--- a/views/dev.ejs
+++ b/views/dev.ejs
@@ -9,7 +9,7 @@
                  <li class="list-group-item">About Page for Developers</li>
                  <div class="well">
                   <p><em>MVC (Model-View-Controller)</em> design architecture using NodeJS framework: ExpressJS.</p>
-                  <p>Following RESTful ROUTES standard for HTTP REQUESTS (get,post,put,delete) mapping to <em>control</em> CRUD operations.</p>
+                  <p>Following RESTful routes standard for HTTP REQUESTS (get,post,put,delete) mapping to <em>control</em> CRUD operations.</p>
                   <p>Handling <em>Models</em> using Mongoose npm package.</p>
                   <p>Using templating language EJS to generate HTML markup or <em>Views</em>.</p>
                   <p>Nested route for commenting system.</p>
