--- a/views/dev.ejs
+++ b/views/dev.ejs
@@ -54,7 +54,7 @@
     </div>
 </div>    
 
- <footer class="text-center">
+ <footer class="collapse text-center">
                <hr>
                <p>Copyright <i class="fa fa-copyright" aria-hidden="true"></i>
  2017, Zulhafiz Zaini. All Rights Reserved.<a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>
