--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -32,7 +32,7 @@
              <ul class="nav navbar-nav">
                 <li><a class="navbar-brand" href="/">Home</a></li>
                 <li><a class="navbar-brand" href="/campgrounds">Our Lists</a></li>
-                <li><a class="navbar-brand" href="/dev">Developer Info</a></li>
+                <li><a class="navbar-brand" href="/dev">Info for Developers</a></li>
             
             </div>
             <div class="collapse navbar-collapse">
