Add github icon on nav

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,8 @@
              <ul class="nav navbar-nav">
                 <li><a class="navbar-brand" href="/">Home</a></li>
                 <li><a class="navbar-brand" href="/campgrounds">Our Lists</a></li>
-                <li><a class="navbar-brand" href="/dev">Info for Developers</a></li>
+                <li><a class="navbar-brand" href="/dev">Technical Info</a></li>
+                <li><a href="https://github.com/jiman93/jomhiking" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
             
             </div>
             <div class="collapse navbar-collapse">
