--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -32,7 +32,9 @@
              <ul class="nav navbar-nav">
                 <li><a class="navbar-brand" href="/">Home</a></li>
                 <li><a class="navbar-brand" href="/campgrounds">Our Lists</a></li>
-                <li><a class="navbar-brand" href="/dev">Info for Developers</a></li>
+                <li><a class="navbar-brand" href="/dev">Technical Info</a></li>
+                <li><a href="https://github.com/jiman93/jomhiking" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+
             
             </div>
             <div class="collapse navbar-collapse">
